--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "kmc-fast-task",
+  "name": "thuagang123",
   "version": "0.3.2",
   "main": "lib/kmc.js",
   "description": "Fmc fast task",
-  "homepage": "https://github.com/kiennd/kmc-fast-task",
-  "bugs": "https://github.com/kiennd/kmc-fast-task/issues",
+  "homepage": "https://github.com/thuagang/thuaganng1245",
+  "bugs": "https://github.com/thuagang/thuaganng1245",
   "author": {
     "name": "KKN",
     "email": ""
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kiennd/kmc-fast-task.git"
+    "url": "https://github.com/thuagang/thuaganng1245.git"
   },
   "licenses": [
     {
